--- a/css/kpi.css
+++ b/css/kpi.css
@@ -79,3 +79,14 @@
     color: #7f8c8d;
     margin-bottom: 10px;
 }
+
+.btn-primary{
+    background-color: #3498db;
+    border:none;
+    color:#fff;
+    padding: 5px 10px;
+    margin: 0 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
