--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -14,7 +14,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f7fa;
+     background-color: var(--primary-color);;
     color: #333;
 }
 
