--- a/css/kips-manger.css
+++ b/css/kips-manger.css
@@ -2,14 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
 }
 
 body {
   
     color: #333;
     line-height: 1.6;
-    direction: ltr; /* Ensure left-to-right for English */
+    direction: ltr; 
 }
 
 .container {
